stack/cloudformation/machines-etcd2.json
{
  "Mappings": {
    "RegionMap": {
      "sa-east-1": {
        "AMI": "ami-154af179"
      },
      "ap-southeast-2": {
        "AMI": "ami-f35b0590"
      },
      "ap-southeast-1": {
        "AMI": "ami-da67a0b9"
      },
      "us-gov-west-1": {
        "AMI": "ami-05bc0164"
      },
      "eu-west-1": {
        "AMI": "ami-55d20b26"
      },
      "us-east-1": {
        "AMI": "ami-37bdc15d"
      },
      "us-west-2": {
        "AMI": "ami-00ebfc61"
      },
      "ap-northeast-1": {
        "AMI": "ami-84e0c7ea"
      },
      "us-west-1": {
        "AMI": "ami-27553a47"
      },
      "eu-central-1": {
        "AMI": "ami-fdd4c791"
      }
    }
  },
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Jobs stack",
  "Resources": {
    "EtcdIngress4001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "ToPort": 4001,
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": 4001
      }
    },
    "CoreOSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Jobs",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0",
            "FromPort": 22
          },
          {
            "IpProtocol": "tcp",
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80
          }
        ]
      }
    },
    "EtcdIngress7001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "ToPort": 7001,
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": 7001
      }
    },
    "CoreOSServerLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "KeyName": {
          "Ref": "KeyPair"
        },
        "SecurityGroups": [
          {
            "Ref": "CoreOSSecurityGroup"
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#cloud-config\n\ncoreos:\n  update:\n    reboot-strategy: off\n  units:\n    - name: etcd2.service\n      command: start\n    - name: fleet.service\n      command: start\n  etcd2:\n    advertise-client-urls: http://$private_ipv4:2379\n    initial-advertise-peer-urls: http://$private_ipv4:2380\n    listen-client-urls: http://0.0.0.0:2379\n    listen-peer-urls: http://$private_ipv4:2380\n    discovery: ",
                {
                  "Ref": "DiscoveryURL"
                }
              ]
            ]
          }
        },
        "InstanceType": "t2.micro"
      }
    },
    "EtcdIngress2379": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "ToPort": 2379,
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": 2379
      }
    },
    "CoreOSUser": {
      "Type": "AWS::IAM::User"
    },
    "CoreOSAccessKey": {
      "Type": "AWS::IAM::AccessKey",
      "Properties": {
        "UserName": {
          "Ref": "CoreOSUser"
        }
      }
    },
    "EtcdIngress2380": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "ToPort": 2380,
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": 2380
      }
    },
    "RedisIngress6379": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "ToPort": 6379,
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": 6379
      }
    },
    "CoreOSServerAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "Tags": [
          {
            "Value": {
              "Ref": "AWS::StackName"
            },
            "PropagateAtLaunch": true,
            "Key": "Name"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "CoreOSServerLaunchConfig"
        },
        "DesiredCapacity": {
          "Ref": "ClusterSize"
        },
        "MaxSize": 10,
        "MinSize": 3,
        "AvailabilityZones": {
          "Fn::GetAZs": {
            "Ref": "AWS::Region"
          }
        }
      }
    }
  },
  "Parameters": {
    "ClusterSize": {
      "MinValue": 3,
      "Type": "Number",
      "Description": "Number of nodes in your cluster",
      "Default": 3
    },
    "KeyPair": {
      "Type": "String",
      "Description": "The name of an existing EC2 Key Pair to allow SSH access to the instance."
    },
    "DiscoveryURL": {
      "Type": "String",
      "Description": "An unique etcd2 cluster discovery URL. Grab a new token from https://discovery.etcd.io/new?size=n (Ignore the size parameter for etcd 0.4.x.)"
    }
  }
}
