stack/cloudformation/machines.json
{
  "Mappings": {
    "RegionMap": {
      "ap-southeast-1": {
        "ami": "ami-56053104"
      },
      "ap-southeast-2": {
        "ami": "ami-09027433"
      },
      "sa-east-1": {
        "ami": "ami-75972968"
      },
      "us-east-1": {
        "ami": "ami-e0efb888"
      },
      "us-west-1": {
        "ami": "ami-b8958ffd"
      },
      "ap-northeast-1": {
        "ami": "ami-7dfc1c7d"
      },
      "us-west-2": {
        "ami": "ami-a387a093"
      },
      "eu-west-1": {
        "ami": "ami-e524b192"
      },
      "eu-central-1": {
        "ami": "ami-da4f7dc7"
      }
    }
  },
  "Resources": {
    "CoreOSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Jobs",
        "SecurityGroupIngress": [
          {
            "FromPort": 22,
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "ToPort": 22
          },
          {
            "FromPort": 80,
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "ToPort": 80
          }
        ]
      }
    },
    "EtcdIngress7001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 7001,
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "ToPort": 7001
      }
    },
    "EtcdIngress4001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 4001,
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "ToPort": 4001
      }
    },
    "CoreOSServerLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "KeyPair"
        },
        "ImageId": {
          "Fn::FindInMap": [
            "RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "ami"
          ]
        },
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#cloud-config\n\ncoreos:\n  units:\n    - name: etcd.service\n      command: start\n    - name: fleet.service\n      command: start\n    #- name: master.service\n    #  command: start\n    #  content: \n  etcd:\n    addr: $private_ipv4:4001\n    peer-addr: $private_ipv4:7001\n    discovery: ",
                {
                  "Ref": "DiscoveryURL"
                }
              ]
            ]
          }
        },
        "SecurityGroups": [
          {
            "Ref": "CoreOSSecurityGroup"
          }
        ]
      }
    },
    "CoreOSUser": {
      "Type": "AWS::IAM::User"
    },
    "CoreOSServerAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "LaunchConfigurationName": {
          "Ref": "CoreOSServerLaunchConfig"
        },
        "AvailabilityZones": {
          "Fn::GetAZs": {
            "Ref": "AWS::Region"
          }
        },
        "MaxSize": 10,
        "MinSize": 1,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            },
            "PropagateAtLaunch": true
          }
        ],
        "DesiredCapacity": {
          "Ref": "ClusterSize"
        }
      }
    },
    "CoreOSAccessKey": {
      "Type": "AWS::IAM::AccessKey",
      "Properties": {
        "UserName": {
          "Ref": "CoreOSUser"
        }
      }
    },
    "RedisIngress6379": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "CoreOSSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 6379,
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "CoreOSSecurityGroup",
            "GroupId"
          ]
        },
        "ToPort": 6379
      }
    }
  },
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Jobs stack",
  "Parameters": {
    "DiscoveryURL": {
      "Type": "String",
      "Description": "An unique etcd cluster discovery URL. Grab a new token from https://discovery.etcd.io/new"
    },
    "ClusterSize": {
      "MaxValue": 10,
      "Type": "Number",
      "Description": "Number of nodes in your cluster",
      "Default": 3,
      "MinValue": 3
    },
    "KeyPair": {
      "Type": "String",
      "Description": "The name of an existing EC2 Key Pair to allow SSH access to the instance."
    }
  }
}
